beginning with responsive design

--- a/html/Researcher.html
+++ b/html/Researcher.html
@@ -15,7 +15,7 @@
         <li><a href="Researcher.html">Researcher</a></li>
         <li><a href="Programmer.html">Programmer</a></li>
         
-        <li id="nav-icon"><button id="btn1"><img src="./images/black/half-moon.png" alt="moon" title="dark mode" id="toggleImg"/></button></li>
+        <li id="nav-icon"><button id="btn1"><img src="../styles/images/black/half-moon.png" alt="moon" title="dark mode" id="toggleImg"/></button></li>
 
     </ul>
  </nav>
